<resources>
    <string name="app_name">USTHWeather</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Sunshine">Sunny</string>
    <string name="action_favorite">Favorite</string>
</resources>
